updated/new diagrams in literature review

--- a/03_background/literature_review.tex
+++ b/03_background/literature_review.tex
@@ -61,23 +61,16 @@ One of the overbearing concepts that Milgram et al. introduced is that whilst bo
 
 \begin{figure}[h]
 \centering
-\includegraphics[width=0.8\textwidth]{reality_virtuality_extent_of_world_knowledge_continuum.png}
-\caption{\textit{Reality-Virtuality continuum}, parallel with \textit{Extent of World Knowledge continuum}.}
+\includegraphics[width=\textwidth]{virtuality_continuum_extent_of_world_knowledge_continuum.png}
+\caption{\textit{Reality-Virtuality continuum} (top), parallel with \textit{Extent of World Knowledge continuum} (bottom).}
 \label{reality_virtuality_extent_of_world_knowledge_continuum}
 \end{figure}
 
 With a purely virtual environment, the entire viewport must necessarily be computer modelled in order to be rendered and as such there is complete quantitative information about all objects and between all objects being presented. At the opposite end of the spectrum with a completely real environment where none of the viewport is computer modelled there is no quantitative information associated with the content being displayed. At any point between the extremes the environment consists of a mixture of some modelled and some non-modelled content; with the computer associating quantitative information to, and between, the virtual objects, but not to the real objects or between the virtual and real objects.
 
-Carrying the continuum concept further, Milgram et al. illustrate their understanding of the existing term \textit{augmented reality} and also introduce two related new terms; \textit{augmented virtuality} and \textit{mixed reality} (see figure \ref{reality_virtuality_mixed_reality_continuum.png}). In this fashion, \textit{mixed reality} is used to describe any environment that is not completely real or completely virtual; that is, it encompasses all positions on the continuum between the extremes. \textit{Augmented reality} is used to describe a real environment upon which virtual objects are overlain and \textit{augmented virtuality} is used to describe a virtual environment upon which objects sampled from the real world (such as video feeds) are overlain. It is also shown here that \textit{mixed reality} encompasses both \textit{augmented reality} and \textit{augmented virtuality}.
+Carrying the continuum concept further, Milgram et al. illustrate their understanding of the existing term \textit{augmented reality} and also introduce two related new terms; \textit{augmented virtuality} and \textit{mixed reality}. In this fashion, \textit{mixed reality} is used to describe any environment that is not completely real or completely virtual; that is, it encompasses all positions on the continuum between the extremes. \textit{Augmented reality} is used to describe a real environment upon which virtual objects are overlain and \textit{augmented virtuality} is used to describe a virtual environment upon which objects sampled from the real world (such as video feeds) are overlain. It is also shown here that \textit{mixed reality} encompasses both \textit{augmented reality} and \textit{augmented virtuality}.
 
-\begin{figure}[h]
-\centering
-\includegraphics[width=0.8\textwidth]{reality_virtuality_mixed_reality_continuum.png}
-\caption{Illustration of the terms \textit{mixed reality}, \textit{augmented reality} and \textit{augmented virtuality} within the context of the \textit{Reality-Virtuality} continuum.}
-\label{reality_virtuality_mixed_reality_continuum.png}
-\end{figure}
-
-The obvious question raised from studying figure \ref{reality_virtuality_mixed_reality_continuum.png} is at what point toward the centre of the continuum an environment changes from being \textit{augmented reality} into \textit{augmented virtuality} or vice-versa. The answer lies with consideration of the quantitative knowledge associated with the objects that comprise the viewport.
+One obvious question raised from studying this figure is at what point toward the centre of the continuum an environment changes from being \textit{augmented reality} into \textit{augmented virtuality} or vice-versa. The answer lies with consideration of the quantitative knowledge associated with the objects that comprise the viewport.
 
 For example, if one were to take a viewport depicting a purely real environment and then incrementally add more and more virtual objects, the environment's classification would progress rightward along the continuum. Eventually the entire viewport would be obscured by virtual objects and the obvious conclusion would be to classify the environment as being purely virtual. However this would only be true if there was complete quantitative information associated with, and between, all of the virtual objects within the real 3D space of the viewport, which is unlikely to be the case.
 
@@ -375,6 +368,15 @@ Whilst AR falls within the realms of Mixed Reality (MR), a XR system can be cons
 		\includegraphics[width=\textwidth]{virtuality-continuum-cross-reality-3.png}
 		\caption{A XR system with the user attending to VR stimuli.}
 		\label{virtuality-continuum-cross-reality-3}
+	\end{center}
+\end{figure}
+
+%=========================================================================================================
+
+\begin{figure}[h]
+	\begin{center}
+		\includegraphics[width=\textwidth]{virtuality-continuum-cross-reality-information-flows-dashed.png}
+		\caption{The two environments that comprise a XR system, plus the bidirectional information flow between them.}
 	\end{center}
 \end{figure}
 
