Further literature review modifications, new Want diagrams.

--- a/03_background/literature_review.tex
+++ b/03_background/literature_review.tex
@@ -113,20 +113,22 @@ The virtuality continuum is here considered to be analogous to the \textit{locus
 \label{subsec:reality_matrix}
 Another useful method of illustrating the relationships between the different categories of alternate realities was put forward by Roy Want in his introductory article for a 2009 issue of IEEE Pervasive Computing dedicated to the \textit{cross reality} paradigm~\cite{Want2009}. Here he presented a 2x2 matrix categorising the different terms according to whether the experience and overlay data are real or virtual (see figure \ref{original_virtuality_matrix.png}).
 
-\begin{figure}[h]
-	\centering
-	\includegraphics[width=0.8\textwidth]{Want_virtuality_matrix_original.png}
-	\caption{Want's original virtuality matrix.}
-	\label{original_virtuality_matrix.png}
-\end{figure}
-
 Whilst this is a useful representation, some of the definitions and criteria depicted do not match with those of Milgram et al. or even with those of other authors in the same issue of IEEE Pervasive Computing, let alone other publications concerning alternate realities. Thus this review presents a modified version of Want's matrix, that is better in fitting with the consensual definitions built from reviewing the literature on alternate realities, as figure \ref{modified_virtuality_matrix.png}.
 
-\begin{figure}[h]
-	\centering
-	\includegraphics[width=0.8\textwidth]{Want_virtuality_matrix_modified.png}
-	\caption{Want's virtuality matrix after modification by this review; note removal of \textit{mixed reality}, 	\textit{cross reality} and \textit{embodied virtuality} and addition of \textit{reality} and \textit{augmented virtuality}.}
-\label{modified_virtuality_matrix.png}
+\begin{figure}
+\centering
+\begin{minipage}{.5\textwidth}
+ 	\centering
+ 	\includegraphics[width=0.95\linewidth]{Want_virtuality_matrix_original.png}
+ 	\caption{Want's original virtuality matrix.}
+	\label{original_virtuality_matrix.png}
+\end{minipage}%
+\begin{minipage}{.5\textwidth}
+  \centering
+  \includegraphics[width=0.95\linewidth]{Want_virtuality_matrix_modified.png}
+    \caption{Modified Want matrix.}
+    \label{modified_virtuality_matrix.png}
+\end{minipage}
 \end{figure}
 
 Where Want has \textit{cross reality} occupying the upper left quadrant at the congruence of `experience virtual' and `overlay data real' this review instead places \textit{augmented virtuality}. Referring to Milgram's continuum `experience virtual' relates to a position somewhere on the right half, while `overlay data real' relates to presentation over this virtual environment of sampled real world data resulting in a partially modelled environment, leaving us in the area of the continuum occupied by \textit{augmented virtuality}.
@@ -148,17 +150,42 @@ Lifton does however explain that while such a taxonomy can be successfully appli
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=\textwidth]{Lifton_continuum_original.png}
+	\includegraphics[width=.8\textwidth]{Lifton_continuum_original.png}
 	\caption{The \textit{``virtual worlds taxonomy as viewed on the real-virtual axis''} presented by Lifton.}
 	\label{original_lifton_axis.png}
 \end{figure}
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=\textwidth]{Lifton_continuum_modified.png}
+	\includegraphics[width=.8\textwidth]{Lifton_continuum_modified.png}
 	\caption{Lifton's taxonomy as modified by this review.}
 	\label{modified_lifton_axis.png}
 \end{figure}
+
+\subsection{Even More Reality Diagrams}
+
+This is from Steve Mann.
+
+\begin{figure}
+\centering
+\begin{minipage}{.5\textwidth}
+  \centering
+  \includegraphics[width=0.95\linewidth]{Mann_venn_original.png}
+  \caption{Original Mann venn diagram.}
+\end{minipage}%
+\begin{minipage}{.5\textwidth}
+  \centering
+  \includegraphics[width=0.95\linewidth]{Mann_venn_mod_1.png}
+    \caption{Modified Mann venn diagram.}
+\end{minipage}
+\end{figure}
+
+\begin{figure}
+\centering
+  \includegraphics[width=0.6\linewidth]{Mann_venn_mod_3.png}
+  \caption{Further modified Mann venn diagram.}
+\end{figure}
+
 
 %=========================================================================================================
 
@@ -389,9 +416,15 @@ Whilst AR falls within the realms of Mixed Reality (MR), a XR system can be cons
 
 %=========================================================================================================
 
+\section{On Presence}
+
+To Do!
+
+%=========================================================================================================
+
 % More from experimental plan document
 
-\section{Informing Mobile XR Implementation / On Presence}
+\section{Informing Mobile XR Implementation}
 
 \newcommand{\breakinpresencefootnote}{\footnote{The definition of \textbf{break in presence} adopted herein is the second from Waterworth \& Waterworth~\cite{Waterworth2001} (p205): a movement along the focus axis away from presence in the real or a virtual environment \& toward absence. This differs to Slater \& Steed's original definition in~\cite{Slater2000} as they considered presence only in terms of attending to stimuli from a virtual environment, with a break in presence as a Gestalt switch to instead attending to stimuli from the real environment. Waterworth \& Waterworth's model considers presence in terms of attending to stimuli from either the real \textit{or a virtual} environment, with a break in presence representing absence in the sense of heightened conceptual load \& the resultant reduced perceptual processing of environmental stimuli originating from \textit{either} the real or a virtual environment. This definition better fits the situation invoked by the Mirrorshades platform, which is concerned with intentionally \& willingly switching engagement between stimuli from both real \& virtual environments, rather than engaging with stimuli from only a virtual environment in a scenario where stimuli from the real environment are considered a `distraction'.}}
 
