Major lit review rework

--- a/thesis.tex
+++ b/thesis.tex
@@ -88,7 +88,7 @@
 % ======= ======= ======= ======= ======= ======= =======
 
 \chapter{Background, Theory \& Rationale}
-\input{03_background/background.tex}
+%\input{03_background/background.tex}
 \graphicspath{ {03_background/images/} }
 \input{03_background/literature_review.tex}
 
